package protobuf;

import "entry.proto";

option go_package ="protobuf/";

message AppendEntriesRequest {
	required uint64 Term=1;
	required uint64 PrevLogIndex=2;
	required uint64 PrevLogTerm=3;
	required uint64 CommitIndex=4;
	required string LeaderId=5;
	repeated Entry Entries=6;
}
